--- a/common.it.po
+++ b/common.it.po
@@ -3199,7 +3199,7 @@ msgstr "^BG%s^K1 non è riuscito a trovare riparo dal razzo di un Racer%s%s"
 #: qcsrc/common/notifications/all.inc:361
 #, c-format
 msgid "^BG%s^K1 ended up in the wrong place%s%s"
-msgstr ""
+msgstr "^BG%s^K1 è finito nel posto sbagliato%s%s"
 
 #: qcsrc/common/notifications/all.inc:364
 #, c-format
