--- a/common.en_GB.po
+++ b/common.en_GB.po
@@ -4,14 +4,15 @@
 #
 # Translators:
 # k9 er, 2024
-# k9 er, 2024
+# k9er, 2024
+# k9er, 2024
 msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-02 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: k9 er, 2024\n"
+"Last-Translator: k9er, 2024\n"
 "Language-Team: English (United Kingdom) (http://app.transifex.com/team-"
 "xonotic/xonotic/language/en_GB/)\n"
 "Language: en_GB\n"
@@ -3139,7 +3140,7 @@ msgstr "^BG%s^K1 couldn't find shelter from a Racer rocket%s%s"
 #: qcsrc/common/notifications/all.inc:361
 #, c-format
 msgid "^BG%s^K1 ended up in the wrong place%s%s"
-msgstr ""
+msgstr "^BG%s^K1 ended up in the wrong place%s%s"
 
 #: qcsrc/common/notifications/all.inc:364
 #, c-format
