--- a/common.en_AU.po
+++ b/common.en_AU.po
@@ -6,7 +6,8 @@
 # Ben Dundon, 2023
 # Ben Dundon, 2023
 # k9 er, 2024
-# k9 er, 2024
+# k9er, 2024
+# k9er, 2024
 # Laurene Albrand, 2015
 # Laurene Albrand, 2015
 # Laurene Albrand, 2015
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-02 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Stuart Young <cefiar@gmail.com>, 2016\n"
+"Last-Translator: k9er, 2024\n"
 "Language-Team: English (Australia) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/en_AU/)\n"
 "Language: en_AU\n"
@@ -3146,7 +3147,7 @@ msgstr "^BG%s^K1 couldn't find shelter from a Racer rocket%s%s"
 #: qcsrc/common/notifications/all.inc:361
 #, c-format
 msgid "^BG%s^K1 ended up in the wrong place%s%s"
-msgstr ""
+msgstr "^BG%s^K1 ended up in the wrong place%s%s"
 
 #: qcsrc/common/notifications/all.inc:364
 #, c-format
