--- a/common.en_AU.po
+++ b/common.en_AU.po
@@ -5,6 +5,7 @@
 # Translators:
 # Ben Dundon, 2023
 # Ben Dundon, 2023
+# k9er, 2024
 # k9 er, 2024
 # k9er, 2024
 # k9er, 2024
@@ -19,7 +20,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-02 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: k9er, 2024\n"
+"Last-Translator: Stuart Young <cefiar@gmail.com>, 2016\n"
 "Language-Team: English (Australia) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/en_AU/)\n"
 "Language: en_AU\n"
